Added git ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Compiled CSS from Sass
+src/main.css
+src/main.css.map
+
+# VS Code user settings
+.vscode/
