--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "NONCOMPACT",
+  "name": "International Consortium for Multimodality Phenotyping in Adults with non-Compaction",
   "icons": [
     {
       "src": "favicon.ico",
