--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "yarn sass && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "sass": "node_modules/sass/sass.js src/sass/main.scss src/main.css",
